--- a/SterkeFroulju/SterkeFroulju/Views/Admin/Index.cshtml
+++ b/SterkeFroulju/SterkeFroulju/Views/Admin/Index.cshtml
@@ -149,8 +149,7 @@
                         </td>
                     </tr>
                 }
-                </
-            </table>>
+            </table>
         </div>
     </div>
 </div>
